iptables.rules
# Generated by iptables-save v1.4.4 on Thu Nov 12 22:04:16 2009
*filter
:INPUT ACCEPT [12:1585]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [12:1585]
-A INPUT -i eth0 
-A INPUT -i eth0 -p tcp -m tcp --dport 8888 
-A INPUT -i eth0 -p tcp -m tcp --sport 80 
-A INPUT -i eth0 -p tcp -m tcp --dport 18022 
-A INPUT -i eth0 -p tcp -m tcp --dport 18080 
-A INPUT -i eth0 -p tcp -m tcp --dport 18081 
-A INPUT -i eth0 -p tcp -m tcp --dport 18090 
-A INPUT -i eth0 -p tcp -m multiport --dports 18140:18150 
-A INPUT -i eth0 -p tcp -m tcp --sport 119 
-A INPUT -i eth0 -p udp -m udp --dport 53 
-A INPUT -i eth0 -p tcp -m tcp --dport 53 
-A INPUT -i eth0 -p udp -m udp --sport 53 
-A INPUT -i eth0 -p tcp -m tcp --sport 53 
-A INPUT -i eth0 -p tcp -m tcp --dport 18021 
-A INPUT -i eth0 -p tcp -m tcp --dport 18151 
-A INPUT -i eth0 -p tcp -m tcp --dport 18152 
-A INPUT -i eth0 -p tcp -m tcp --dport 18153 
-A INPUT -i eth0 -p tcp -m tcp --dport 5001 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18022 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 8888 -j ACCEPT 
-A INPUT -i eth0 -p udp -m udp --dport 53 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 53 -j ACCEPT 
-A INPUT -i eth0 -p udp -m udp --dport 123 -j ACCEPT 
-A INPUT -i eth0 -p udp -m udp --dport 161 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18080 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18081 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18090 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m multiport --dports 18140:18150 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18021 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18151 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18152 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 18153 -j ACCEPT 

#synergy
-A INPUT -i eth0 -p tcp -m tcp --dport 24800 -j ACCEPT 

-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i eth0 -p icmp -j ACCEPT 
-A INPUT -i eth0 -j DROP 
-A OUTPUT -o eth0 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 8888 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 80 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18022 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18080 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18081 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18090 
-A OUTPUT -o eth0 -p tcp -m multiport --sports 18140:18150 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 119 
-A OUTPUT -o eth0 -p udp -m udp --sport 53 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 53 
-A OUTPUT -o eth0 -p udp -m udp --dport 53 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 53 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18021 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18151 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18152 
-A OUTPUT -o eth0 -p tcp -m tcp --sport 18153 
-A OUTPUT -o eth0 -j ACCEPT 
COMMIT
# Completed on Thu Nov 12 22:04:16 2009
